--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
     "@supabase/supabase-js": "^2.49.8",
+    "capacitor-voice-recorder": "^7.0.5",
     "firebase": "^11.8.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
